# gocardless-testing

./: .gitignore  README.md  pyproject.toml
homework/: cli.py  gocardless_operations.py  main.py
